# Tara_cravv

./: .env.example  .gitignore  README.md  app.py  assignment.txt  feedback.txt  implementation_plan.md  output.txt  pyproject.toml  requirements.txt  test.py
Hey-Tara_en_raspberry-pi_v4_0_0/: Hey-Tara_en_raspberry-pi_v4_0_0.ppn
Hey-tara_en_windows_v4_0_0/: Hey-tara_en_windows_v4_0_0.ppn
docs/: methodology.md
frontend/: index.html
scripts/: benchmark_latency.py  debug_deepgram.py  generate_diagram.py  generate_pipeline_diagram.py  run_iterations.py  run_pipeline.py  stream_pipeline.py  train_wake_word.py
tara_pipeline/: __init__.py  config.py  pipeline.py
tara_pipeline/stages/: __init__.py  noise_suppression.py  stt.py  vad.py  wake_word.py
tara_pipeline/utils/: __init__.py  audio.py  metrics.py
tests/: conftest.py  test_pipeline.py  test_vad.py  test_wake_word.py
